fixed alignment issue on tp

--- a/website/styles/modules/_team.scss
+++ b/website/styles/modules/_team.scss
@@ -29,7 +29,7 @@ footer {
   display: flex;
   flex-grow: 1;
   gap: 2rem 2rem;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: flex-start;
   flex-wrap: wrap;
   min-height: 60rem;
